# firedrake

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.html  README.md  TODO  aclocal.m4  bencode.c  bencode.h  chat.c  client.c  config.status  configure  configure.ac  doc_sections.txt  echo.c  echo.py  fd.c  fd.h  fd_channels.c  fd_recv.c  fd_recv_ev.c  fd_run.c  fd_send.c  fd_send2.c  fd_send_ev.c  fd_util.c  firedrakemodule.c  hermes.html  libtool  log.txt  mikes_python_server.py  new-server.c  queue.c  server.c  server.h  (+4 more)
.deps/: base64.Plo  fd_channels.Plo  fd_recv.Plo  fd_run.Plo  fd_send.Plo  fd_util.Plo  queue.Plo
autom4te.cache/: output.0  output.1  output.2  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
bindings/: firedrake.py  firedrake2.py  firedrake3.py
chat/: .cproject  Makefile  chat_client.h  chat_server.c  chat_server.h  mychat  protocol_spec.txt  server
chat/.svn/: all-wcprops  entries
chat/.svn/text-base/: .project.svn-base  chat_client.c.svn-base  macros.h.svn-base
chat/Debug/: chat_client.d  chat_server.d  makefile  subdir.mk
examples/: server.c
examples/oldchat/: server.c
src/: base64.c  fd.h  fd_channels.c  fd_recv.c  fd_run.c  fd_send.c  fd_util.c  queue.c  queue.h  server.py  server.py~
test/: server.c
whiteboard/: whiteboard.html
